syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Tagly.Api";

package photos;

message ServerPhoto {
  ServerPhotoMeta meta = 1;
  bytes data = 2;
}

message ServerPhotoMeta {
  string file_name = 2;
  google.protobuf.Timestamp date = 4;
  double latitude = 5;
  double longitude = 6;
  string description = 7;
}

message PhotoCreationStatus {
  bool success = 1;
  int64 created_id = 2;
}

service Photos {
  rpc AddPhoto (ServerPhoto) returns (PhotoCreationStatus);
}
